--- a/build.gradle
+++ b/build.gradle
@@ -25,7 +25,7 @@ tasks.withType(JavaCompile) {
 
 application {
   mainModule = 'com.example.videocutapp'
-  mainClass = 'com.example.videocutapp.HelloApplication'
+  mainClass = 'com.example.videocutapp.VideoCutApp'
 }
 kotlin {
   jvmToolchain( 11 )
@@ -33,7 +33,7 @@ kotlin {
 
 javafx {
   version = '17.0.6'
-  modules = ['javafx.controls', 'javafx.fxml']
+  modules = ['javafx.controls', 'javafx.fxml', 'javafx.media']
 }
 
 dependencies {
