--- a/build.gradle
+++ b/build.gradle
@@ -8,7 +8,7 @@ plugins {
 }
 
 group 'com.example'
-version '1.0.1'
+version '1.0.2'
 
 repositories {
   mavenCentral()
@@ -39,6 +39,8 @@ javafx {
 dependencies {
   testImplementation("org.junit.jupiter:junit-jupiter-api:${junitVersion}")
   testRuntimeOnly("org.junit.jupiter:junit-jupiter-engine:${junitVersion}")
+  implementation group: 'com.github.kokorin.jaffree', name: 'jaffree', version: '2023.09.10'
+  implementation group: 'org.slf4j', name: 'slf4j-simple', version: '1.7.36'
 }
 
 test {
